More CTS fixes and minCd/maxCD -> crDmg